--- a/cdk/.gitignore
+++ b/cdk/.gitignore
@@ -1,6 +1,9 @@
 *.js
 !jest.config.js
+!/babel.config.js
+!/cloudfront-fn/*.js
 *.d.ts
+!/cloudfront-fn/*.d.ts
 node_modules
 
 # CDK asset staging directory
