--- a/cdk/package.json
+++ b/cdk/package.json
@@ -11,12 +11,16 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
     "@types/jest": "^27.5.0",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
+    "aws-cdk": "2.27.0",
+    "babel-jest": "^27.5.1",
+    "babel-plugin-rewire": "^1.2.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
-    "aws-cdk": "2.27.0",
     "ts-node": "^10.7.0",
     "typescript": "~3.9.7"
   },
