--- a/cdk/package.json
+++ b/cdk/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "^2.28.1",
+    "cdk-common": "file:../cdk-common",
     "constructs": "^10.1.42",
     "source-map-support": "^0.5.21"
   }
