--- a/cdk-ops/package.json
+++ b/cdk-ops/package.json
@@ -21,6 +21,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudformation": "^3.112.0",
     "aws-cdk-lib": "^2.28.1",
     "cdk-common": "file:../cdk-common",
     "constructs": "^10.1.42",
