--- a/zola/config.toml
+++ b/zola/config.toml
@@ -17,7 +17,11 @@ build_search_index = false
 [markdown]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
-highlight_code = false
+highlight_code = true
+highlight_theme = "css"
+highlight_themes_css = [
+  { theme = "cheerfully-light", filename = "syntax-highlight-theme.css" }
+]
 
 [slugify]
 anchors = "safe"
