--- a/cdk-ops/package.json
+++ b/cdk-ops/package.json
@@ -14,17 +14,18 @@
     "@types/jest": "^27.5.0",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
-    "aws-cdk": "^2.28.1",
+    "aws-cdk": "^2.42.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-lambda-python-alpha": "^2.42.0-alpha.0",
     "@aws-sdk/client-cloudformation": "^3.112.0",
-    "aws-cdk-lib": "^2.28.1",
+    "aws-cdk-lib": "^2.42.0",
     "cdk-common": "file:../cdk-common",
-    "constructs": "^10.1.42",
+    "constructs": "^10.1.106",
     "source-map-support": "^0.5.21"
   }
 }
