feat(cdk-ops): add data warehouse population script
- Introduces a new script `bin/populate-data-warehouse.js` that
  populates the database and tables of the data warehouse on a given
  deployment stage. A new npm script `populate-dw` runs this script.
- Tells `git` not to ignore `bin/populate-data-warehouse.js`.

issue codemonger-io/codemonger#0

--- a/cdk-ops/package.json
+++ b/cdk-ops/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "populate-dw": "node bin/populate-data-warehouse.js"
   },
   "devDependencies": {
     "@types/jest": "^27.5.0",
