feat(zola): add product page templates
- Introduces templates for product pages:
    - `zola/templates/product.html`: lists products
    - `zola/templates/product-page.html`: introduces individual products

  Introduces new CSS classes and rules for product pages.

  Increments the weight of the blog pages to let "Products" menu precede
  "Blogs" menu.

  Adds some translations.

issue codemonger-io/codemonger#51

--- a/zola/config.toml
+++ b/zola/config.toml
@@ -31,8 +31,11 @@ anchors = "safe"
 [languages.en.translations]
 blog = "Blog"
 home = "Home"
+product = "Product"
 newer_posts = "Newer"
 older_posts = "Older"
+previous_products = "Previous"
+next_products = "Next"
 page = "Page"
 philosophy = "I code for you and myself. Until the day AI will replace me."
 tweet_v = "Tweet"
@@ -42,8 +45,11 @@ tweet_v = "Tweet"
 [languages.ja.translations]
 blog = "ブログ"
 home = "ホーム"
+product = "プロダクト"
 newer_posts = "より新しい"
 older_posts = "より古い"
+previous_products = "前"
+next_products = "次"
 page = "ページ"
 philosophy = "あなたと私自身のためにコードを書きます。AIが私を置き換えるその日まで。"
 tweet_v = "ツイートする"
